fixed text overflow

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 									    <div class="resume-timeline-item-desc">
 												<ul>
 														<li>Presented at town hall event at Ross School of Business on use cases of blockchain technology, specifically its impact on supply chain management. </li>
-														<li>Researched and wrote articles on a variety of topics focused on distributed technology (https://medium.com/wolverineblockchain) </li>
+														<li>Researched and wrote articles on a variety of topics focused on distributed technology. </li>
 													</ul>
 									    </div><!--//resume-timeline-item-desc-->
 
