--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 										        <h3 class="resume-position-title font-weight-bold mb-1">Software Engineer</h3>
 										        <div class="resume-company-name ml-auto">Together Chicago</div>
 										    </div><!--//row-->
-										    <div class="resume-position-time">January 2018 - Present</div>
+										    <div class="resume-position-time">January 2018 - Present | Chicago, IL & Ann Arbor, MI</div>
 									    </div><!--//resume-timeline-item-header-->
 									    <div class="resume-timeline-item-desc">
 												<ul>
@@ -135,7 +135,7 @@
 										        <h3 class="resume-position-title font-weight-bold mb-1">Technology Analyst</h3>
 										        <div class="resume-company-name ml-auto">Wolverine Blockchain</div>
 										    </div><!--//row-->
-										    <div class="resume-position-time">October 2017 - Present</div>
+										    <div class="resume-position-time">October 2017 - Present | Ann Arbor, MI</div>
 									    </div><!--//resume-timeline-item-header-->
 									    <div class="resume-timeline-item-desc">
 												<ul>
@@ -151,9 +151,9 @@
 									    <div class="resume-timeline-item-header mb-2">
 										    <div class="d-flex flex-column flex-md-row">
 										        <h3 class="resume-position-title font-weight-bold mb-1">Research Assistant</h3>
-										        <div class="resume-company-name ml-auto">MSU Department of Micrbobiology </div>
+										        <div class="resume-company-name ml-auto">MSU Department of Micrbobiology</div>
 										    </div><!--//row-->
-										    <div class="resume-position-time">January 2014 - August 2015</div>
+										    <div class="resume-position-time">January 2014 - August 2015 | East Lansing, MI</div>
 									    </div><!--//resume-timeline-item-header-->
 									    <div class="resume-timeline-item-desc">
 												<ul>
@@ -284,7 +284,7 @@
 													<ul class="list-inline">
 														<li class="list-inline-item"><span class="badge badge-primary badge-pill">Angular</span></li>
 														<li class="list-inline-item"><span class="badge badge-primary badge-pill">SemanticUI</span></li>
-														<li class="list-inline-item"><span class="badge badge-primary badge-pill">Node.js/span></li>
+														<li class="list-inline-item"><span class="badge badge-primary badge-pill">Node.js</span></li>
 														<li class="list-inline-item"><span class="badge badge-primary badge-pill">PostgreSQL</span></li>
 														<li class="list-inline-item"><span class="badge badge-primary badge-pill">socket.io</span></li>
 													</ul>
