--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
 						    <div class="title mb-3">Computer Science and Cognitive Science Student at University of Michigan</div>
 						    <ul class="list-unstyled">
 							    <li class="mb-2"><a href="mailto:kwatraka@umich.edu"><i class="far fa-envelope fa-fw mr-2" data-fa-transform="grow-3"></i>kwatraka@umich.edu</a></li>
-							    <li><a href="#"><i class="fas fa-mobile-alt fa-fw mr-2" data-fa-transform="grow-6"></i>916 934 4363</a></li>
+							    <li><a href="tel:1-916-934-4363"><i class="fas fa-mobile-alt fa-fw mr-2" data-fa-transform="grow-6"></i>916 934 4363</a></li>
 						    </ul>
 					    </div><!--//primary-info-->
 					    <div class="secondary-info ml-md-auto mt-2">
 						    <ul class="resume-social list-unstyled">
-				                <li class="mb-3"><a href="https://www.linkedin.com/in/karan-kwatra/"><span class="fa-container text-center mr-2"><i class="fab fa-linkedin-in fa-fw"></i></span>linkedin.com/in/karan-kwatra</a></li>
-								<li class="mb-3"><a href="https://github.com/karankwatra"><span class="fa-container text-center mr-2"><i class="fab fa-github-alt fa-fw"></i></span>github.com/karankwatra</a></li>
-								<li class="mb-3"><a href="https://medium.com/@karankwatra"><span class="fa-container text-center mr-2"><i class="fab fa-medium fa-fw"></i></span>medium.com/karankwatra</a></li>
+				                <li class="mb-3"><a href="https://www.linkedin.com/in/karan-kwatra/" target="_blank"><span class="fa-container text-center mr-2"><i class="fab fa-linkedin-in fa-fw"></i></span>linkedin.com/in/karan-kwatra</a></li>
+								<li class="mb-3"><a href="https://github.com/karankwatra" target="_blank"><span class="fa-container text-center mr-2"><i class="fab fa-github-alt fa-fw"></i></span>github.com/karankwatra</a></li>
+								<li class="mb-3"><a href="https://medium.com/@karankwatra" target="_blank"><span class="fa-container text-center mr-2"><i class="fab fa-medium fa-fw"></i></span>medium.com/karankwatra</a></li>
 				                <li><a href="http://karankwatra.com"><span class="fa-container text-center mr-2"><i class="fas fa-globe"></i></span>karankwatra.com</a></li>
 								<a href="Resume.pdf" style="color:white;" target="_blank"><button style="margin-top:40px" class="btn btn-primary float-right">View my Resume</button></a>
 							</ul>
