--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 									    <div class="resume-timeline-item-header mb-2">
 										    <div class="d-flex flex-column flex-md-row">
 										        <h3 class="resume-position-title font-weight-bold mb-1">Research Assistant</h3>
-										        <div class="resume-company-name ml-auto">MSU Department of Micrbobiology</div>
+										        <div class="resume-company-name ml-auto">MSU Department of Microbiology</div>
 										    </div><!--//row-->
 										    <div class="resume-position-time">January 2014 - August 2015 | East Lansing, MI</div>
 									    </div><!--//resume-timeline-item-header-->
